--- a/module1-01-intro/module1-01-intro.ipynb
+++ b/module1-01-intro/module1-01-intro.ipynb
@@ -74,7 +74,9 @@
     "\n",
     "<p align=\"center\">\n",
     "  <img src=\"./ms-employment-software.png\" width=\"500\">\n",
-    "</p>"
+    "</p>\n",
+    "\n",
+    "**Julia**: _Walk Like Python; Run Like C._"
    ]
   },
   {
