update to introduction slides

--- a/module1-01-intro/module1-01-intro.ipynb
+++ b/module1-01-intro/module1-01-intro.ipynb
@@ -21,7 +21,7 @@
     "    \n",
     "    Source: [DataCamp](https://www.datacamp.com/).\n",
     "\n",
-    "- Data is increasing in [volume, variety, velocity, variety](http://www.forbes.com/sites/oreillymedia/2012/01/19/volume-velocity-variety-what-you-need-to-know-about-big-data/).\n",
+    "- Data is increasing in [volume, variety, velocity, variety, and value](http://www.forbes.com/sites/oreillymedia/2012/01/19/volume-velocity-variety-what-you-need-to-know-about-big-data/) (5V).\n",
     "\n",
     "    <p align=\"center\">\n",
     "      <img src=\"./4-Vs-of-big-data.jpg\" width=\"500\">\n",
@@ -29,9 +29,11 @@
     "    \n",
     "    Source: [IBM](https://www.ibm.com/blogs/watson-health/the-5-vs-of-big-data/).\n",
     "\n",
-    "- My favorite definition of a _data scientist_:\n",
+    "- My favorite definition of a _data scientist_ (Josh Willis on Twitter?):\n",
     "\n",
-    "> A data scientist is someone who is better at statistics than any software engineer and better at software engineering than any statistician."
+    "> A data scientist is someone who is better at statistics than any software engineer and better at software engineering than any statistician.\n",
+    "\n",
+    "- [Glassdoor](https://www.glassdoor.com/List/Best-Jobs-in-America-LST_KQ0,20.htm) consistently ranks data scientists as the top 3 best jobs in America."
    ]
   },
   {
@@ -85,9 +87,36 @@
    "source": [
     "## What's this workshop about? \n",
     "\n",
-    "Hands-on experience on a typical data science workflow using Julia, Python, and R. \n",
+    "- Hands-on experience on a typical data science workflow using Julia, Python, and R. \n",
     "\n",
-    "data ingestion (from text files or databases) -> data wrangling (filtering, selecting, merging, pivoting) -> data visualization (static, interactive) -> data analytics"
+    "> data ingestion (from text files or databases) -> data wrangling (filtering, selecting, merging, pivoting) -> data visualization (static, interactive) -> data analytics\n",
+    "\n",
+    "- Module 1 practices the workflow starting from text files or databases.\n",
+    "\n",
+    "- Module 2 practices the workflow starting from genomic data.\n",
+    "\n",
+    "- The point is not to memorize all the commands, but to have a high-level understanding of the workflow and appreciate the ease of data manipulations using these languages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MIMIC data\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img src=\"./bidmc.jpeg\" width=\"500\">\n",
+    "</p>\n",
+    "\n",
+    "Source: [URL](https://www.healthcareitnews.com/news/beth-israel-deaconess-creates-homegrown-telehealth-help-amazon)\n",
+    "\n",
+    "- Tutorials in Module 1 use [MIMIC IV](https://physionet.org/content/mimiciv/1.0/), an intensive care electronic health record (EHR) dataset curated from over 40,000 patients in the Beth Israel Deaconess Medical Center (BIDMC) at Boston. \n",
+    "\n",
+    "- Suppose you are the chief data scientist at BIDMC and are tasked developing a predictive model to improve the **30-day mortality rate**, a key factor when ranking hospitals. \n",
+    "\n",
+    "- Given the basic characteristics (e.g., demographics), vital signs, and initial lab tests of a newly admitted ICU patient, can we predict the chance the patient dies within 30 days of the admission?\n",
+    "\n",
+    "    How to create a meaningful cohort for this predictive modeling? "
    ]
   },
   {
@@ -96,13 +125,13 @@
    "source": [
     "## How to get started\n",
     "\n",
-    "Steps: \n",
-    "\n",
     "1. Log into server: <>. \n",
     "\n",
     "2. Git clone tutorials: type `git clone https://github.com/LangeSymposium/2022-July-Workshop.git` at terminal.\n",
     "\n",
-    "3. In JupyterLab, navigate to the Jupyter notebook and run code chunks."
+    "3. In JupyterLab, navigate to the Jupyter notebooks and run code chunks.\n",
+    "\n",
+    "4. Orientation to the JupyterLab interface."
    ]
   }
  ],
