--- a/module1-02-R/module1-02-R.ipynb
+++ b/module1-02-R/module1-02-R.ipynb
@@ -71,14 +71,14 @@
    "source": [
     "## tidyverse\n",
     "\n",
-    "- [tidyverse](https://www.tidyverse.org/) is a collection of R packages for data science.\n",
+    "- [tidyverse](https://www.tidyverse.org/) is a collection of R packages for data ingestion, wrangling, and visualization.\n",
     "\n",
     "<p align=\"center\">\n",
-    "<img src=\"./tidyverse_pkgs.jpeg\" height=\"200\">\n",
+    "<img src=\"./tidyverse_pkgs.jpeg\" width=\"450\">\n",
     "</p>\n",
     "\n",
     "<p align=\"center\">\n",
-    "<img src=\"./tidyverse_categories.png\" height=\"200\">\n",
+    "<img src=\"./tidyverse_categories.png\" width=\"450\">\n",
     "</p>\n",
     "\n",
     "- The lead developer Hadley Wickham won the 2019 _COPSS Presidents’ Award_ (the Nobel Prize of Statistics) \n",
@@ -112,6 +112,7 @@
     }
    ],
    "source": [
+    "# load the tidyverse ecosystem\n",
     "library(tidyverse)"
    ]
   },
@@ -158,6 +159,13 @@
    "metadata": {},
    "source": [
     "### MIMIC directory structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run the Bash command `tree -s -L 2 /Users/huazhou/Documents/Box Sync/MIMIC/mimic-iv-1.0` to display the MIMIC directory structure. The number in front of each data file indicates its file size (in bytes). "
    ]
   },
   {
@@ -223,7 +231,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most relevant to this tutorial are `icustays.csv.gz`, `admissions.csv.gz`, `patients.csv.gz`, and `labevents.csv.gz`. Let's first peek into the content of each file."
+    "Data files (`csv.gz`) are grouped under three directories; `core`, `hosp`, and `icu`.\n",
+    "\n",
+    "Most relevant to this tutorial are `icustays.csv.gz`, `admissions.csv.gz`, `patients.csv.gz`, and `chartevents.csv.gz`. Let's first peek into the content of each file, by calling Bash commands within R. Before that, we introduce the pipe, which is heavily used in this tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipe\n",
+    "\n",
+    "Pipe linearizes nested function calls and makes complex code more readable. It enables cleaner code by.    \n",
+    "1. structuring sequences of data operations left-to-right (as opposed to from the inside and out),  \n",
+    "2. avoiding nested function calls,  \n",
+    "3. minimizing the need for local variables and function definitions, and   \n",
+    "4. making it easy to add steps anywhere in the sequence of operations.  \n",
+    "\n",
+    "Pipe exists in many languages: Linux (`|`, `>`, `<`, `>>`), R (`%>%` implemented in the magrittr package in tidyverse), Python (`|`), and Julia (`|>`).\n",
+    "\n",
+    "For example, following nested code calls three R functions in sequence: (i) `str_c` function to construct proper Bash command (a string) to run, (ii) `system` function to run the Bash command, and (iii) `cat` function to properly break lines in the Bash command output.\n",
+    "```r\n",
+    "cat(system(str_c(\"zcat < \", shQuote(str_c(mimic_path, \"/icu/icustays.csv.gz\")), \" | head\"), intern = TRUE), sep = `\\n`)\n",
+    "```\n",
+    "Using pipe `%>%`, following code achieves the same purpose \n",
+    "```r\n",
+    "str_c(\"zcat < \", shQuote(str_c(mimic_path, \"/icu/icustays.csv.gz\")), \" | head\") %>%\n",
+    "    system(intern = TRUE) %>%\n",
+    "    cat(sep = '\\n')\n",
+    "```"
    ]
   },
   {
@@ -413,8 +449,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`chartevents.csv.gz` is a gzipped file of size 2.36GB (329,499,788 rows). Can we even read it?\n",
-    "\n",
     "In this tutorial, let's just focus on the following vitals:\n",
     "\n",
     "- `220045` for heart rate\n",
@@ -478,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import data as tibbles\n",
+    "## Ingest data as tibbles\n",
     "\n",
     "tibbles (from tidyverse) are enhanced dataframes from R.\n",
     "\n",
@@ -486,7 +520,7 @@
     "\n",
     "- `read_csv` handles the gz files seamlessly.\n",
     "\n",
-    "- `read_csv` parses the column data types based on the first batch of rows (`guess_max` argument, default 1000). Most times it gets it right. If not, use `col_types` argument to explicitly specify column times."
+    "- `read_csv` parses the column data types based on the first batch of rows (`guess_max` argument, default 1000). Most times it guesses the column data type right. If not, use the `col_types` argument to explicitly specify column times."
    ]
   },
   {
@@ -705,6 +739,8 @@
    "source": [
     "### chartevents_tbl\n",
     "\n",
+    "`chartevents.csv.gz` is a gzipped file of size 2.36GB (329,499,788 rows). Can we even read it?\n",
+    "\n",
     "Reading in the `chartevents.csv.gz` turns out to be challenging. The following code reads only 4 columns\n",
     "```r\n",
     "chartevents_tbl <- \n",
@@ -719,7 +755,7 @@
     "        )\n",
     "    )\n",
     "```\n",
-    "and took >10 minutes to run on my computer (Intel i7-6920HQ CPU @ 2.90GHz, 16GB RAM). Please do **not** try to run it on the server. The main constraint is memory size. `read_csv` is designed to read the whole dataset into memory, and struggles if the data size is bigger than memory.\n",
+    "and took >10 minutes to run on my computer (Intel i7-6920HQ CPU @ 2.90GHz, 16GB RAM). Please do **NOT** try to run it on the server. The main constraint is memory size. `read_csv` is designed to read the whole dataset into memory, and struggles if the data size is bigger than memory. One solution to this data volume issue is database, which we will briefly mention later.\n",
     "\n",
     "For this tutorial, we prepared a smaller chart event data file `chartevents_filtered_itemid.csv.gz`, which only contains the chart items we are interested in:  \n",
     "- `220045` for heart rate  \n",
@@ -728,13 +764,7 @@
     "- `223761` for Temperature Fahrenheit  \n",
     "- `220210` for Respiratory Rate  \n",
     "\n",
-    "On my computer, it takes around 30 seconds to read in this reduced data file. For reference, the code for generating `chartevents_filtered_itemid.csv.gz` is\n",
-    "```r\n",
-    "chartevents_tbl %>%\n",
-    "    filter(itemid %in% chart_itemid) %>%\n",
-    "    print(width = Inf) %>%\n",
-    "    write_csv(\"chartevents_filtered_itemid.csv.gz\")\n",
-    "```"
+    "On my computer, it takes around 30 seconds to ingest this reduced data file."
    ]
   },
   {
@@ -766,7 +796,7 @@
      "data": {
       "text/plain": [
        "   user  system elapsed \n",
-       " 36.479  15.272  19.492 "
+       " 36.588   6.521  13.157 "
       ]
      },
      "metadata": {},
@@ -841,12 +871,12 @@
    "source": [
     "## Target cohort\n",
     "\n",
-    "We aim to develop a predictive model, which computes the chance of dying within 30 days of ICU stay based on baseline features  \n",
+    "We aim to develop a predictive model, which computes the chance of dying within 30 days of ICU stay `intime` based on baseline features  \n",
     "- `first_careunit`  \n",
     "- `age` at `intime`  \n",
     "- `gender`  \n",
     "- `ethnicity`  \n",
-    "- first measurement of the following vitals since `intime`  \n",
+    "- first measurement of the following vitals since ICU stay `intime`  \n",
     "    - 220045 for heart rate  \n",
     "    - 220181 for Non Invasive Blood Pressure mean  \n",
     "    - 220179 for Non Invasive Blood Pressure systolic  \n",
@@ -877,7 +907,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: restrict to the first ICU stay of each patient"
+    "### Step 1: restrict to the first ICU stay of each patient\n",
+    "\n",
+    "`icustays_tbl` has 76,540 rows, which is reduced to 53,150 unique ICU stays."
    ]
   },
   {
@@ -931,7 +963,8 @@
     }
    ],
    "source": [
-    "icustays_tbl_1ststay <- icustays_tbl %>%\n",
+    "icustays_tbl_1ststay <- \n",
+    "    icustays_tbl %>%\n",
     "    # first ICU stay of each unique `subject_id`\n",
     "    group_by(subject_id) %>%\n",
     "#     slice_min(intime) %>% # this function takes LONG\n",
@@ -946,7 +979,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: restrict to the first vital measurements during the ICU stay"
+    "### Step 2: restrict to the first vital measurements during the ICU stay\n",
+    "\n",
+    "Key data wrangling concepts: select, left_join, right_join, group_by, arrange, pivot"
    ]
   },
   {
@@ -978,8 +1013,8 @@
    "source": [
     "chartevents_tbl_1ststay <-\n",
     "    chartevents_tbl %>%\n",
-    "    # pull in the intime/outtime of that ICU stay\n",
-    "    left_join(select(icustays_tbl_1ststay, stay_id, intime, outtime), by = c(\"stay_id\")) %>%\n",
+    "    # pull in the intime/outtime of each ICU stay\n",
+    "    right_join(select(icustays_tbl_1ststay, stay_id, intime, outtime), by = c(\"stay_id\")) %>%\n",
     "    # only keep items during this ICU intime\n",
     "    filter(charttime >= intime & charttime <= outtime) %>%\n",
     "    # group by itemid\n",
@@ -1008,7 +1043,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3: merge tibbles"
+    "### Step 3: merge tibbles\n",
+    "\n",
+    "New data wrangling concept: mutate."
    ]
   },
   {
@@ -1214,6 +1251,7 @@
     "        temp_f, \n",
     "        resp_rate\n",
     "    ) %>%\n",
+    "    # convert strings to factor for more interpretable summaries\n",
     "    mutate_if(is.character, as.factor) %>%\n",
     "    summary()"
    ]
@@ -1222,7 +1260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you spot anything unusual?"
+    "Do you spot anything unusual?"
    ]
   },
   {
@@ -1485,7 +1523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data QC and imputation\n",
+    "## Data QC and imputation (self study)\n",
     "\n",
     "Necessary steps before any analytics include  \n",
     "- exclude samples and variables with many missing values  \n",
@@ -1494,57 +1532,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                                          first_careunit  gender   \n",
-       " Medical Intensive Care Unit (MICU)              :10233   F:23353  \n",
-       " Cardiac Vascular Intensive Care Unit (CVICU)    : 9450   M:29797  \n",
-       " Medical/Surgical Intensive Care Unit (MICU/SICU): 8833            \n",
-       " Surgical Intensive Care Unit (SICU)             : 8249            \n",
-       " Trauma SICU (TSICU)                             : 6965            \n",
-       " Coronary Care Unit (CCU)                        : 6100            \n",
-       " (Other)                                         : 3320            \n",
-       "                  ethnicity       age_intime       heart_rate    \n",
-       " WHITE                 :35668   Min.   : 18.00   Min.   :  0.00  \n",
-       " UNKNOWN               : 5827   1st Qu.: 54.00   1st Qu.: 74.00  \n",
-       " BLACK/AFRICAN AMERICAN: 4874   Median : 66.00   Median : 85.00  \n",
-       " OTHER                 : 2537   Mean   : 64.47   Mean   : 87.47  \n",
-       " HISPANIC/LATINO       : 1827   3rd Qu.: 78.00   3rd Qu.: 99.00  \n",
-       " ASIAN                 : 1564   Max.   :102.00   Max.   :941.00  \n",
-       " (Other)               :  853                    NA's   :15      \n",
-       "    bp_mean             bp_syst            temp_f         resp_rate     \n",
-       " Min.   :     0.00   Min.   :    0.0   Min.   :  0.00   Min.   :  0.00  \n",
-       " 1st Qu.:    70.00   1st Qu.:  106.0   1st Qu.: 97.60   1st Qu.: 15.00  \n",
-       " Median :    81.00   Median :  122.0   Median : 98.10   Median : 18.00  \n",
-       " Mean   :    87.42   Mean   :  123.8   Mean   : 98.03   Mean   : 18.69  \n",
-       " 3rd Qu.:    93.00   3rd Qu.:  139.0   3rd Qu.: 98.70   3rd Qu.: 22.00  \n",
-       " Max.   :140119.00   Max.   :12262.0   Max.   :106.00   Max.   :180.00  \n",
-       " NA's   :704         NA's   :683       NA's   :954      NA's   :62      "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "mimic_icu_cohort %>%\n",
-    "    select(first_careunit, gender, ethnicity, age_intime, heart_rate, bp_mean, bp_syst, temp_f, resp_rate) %>%\n",
-    "    mutate(across(first_careunit:ethnicity, as.factor)) %>%\n",
-    "    summary()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data analytics\n",
+    "## Data analytics (self study)\n",
     "\n",
-    "Introduce [tidymodels](https://www.tidymodels.org/). Typical workflow:\n",
+    "[tidymodels](https://www.tidymodels.org/) is an ecosystem for:\n",
     "\n",
     "1. Build and fit a model. \n",
     "\n",
