python does not have pipe operator

--- a/module1-02-R/module1-02-R.ipynb
+++ b/module1-02-R/module1-02-R.ipynb
@@ -248,7 +248,7 @@
     "3. minimizing the need for local variables and function definitions, and   \n",
     "4. making it easy to add steps anywhere in the sequence of operations.  \n",
     "\n",
-    "Pipe exists in many languages: Linux (`|`, `>`, `<`, `>>`), R (`%>%` implemented in the magrittr package in tidyverse), Python (`|`), and Julia (`|>`).\n",
+    "Pipe exists in many languages: Linux (`|`, `>`, `<`, `>>`), R (`%>%` implemented in the magrittr package in tidyverse), and Julia (`|>`).\n",
     "\n",
     "For example, following nested code calls three R functions in sequence: (i) `str_c` function to construct proper Bash command (a string) to run, (ii) `system` function to run the Bash command, and (iii) `cat` function to properly break lines in the Bash command output.\n",
     "```r\n",
