python intro part added

--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -5,7 +5,7 @@
    "id": "f5aeab52",
    "metadata": {},
    "source": [
-    "# Python for Data Wrangling"
+    "# Python for Data Science"
    ]
   },
   {
@@ -15,8 +15,30 @@
    "source": [
     "## Why Python?\n",
     "\n",
-    "Created as general-purpose programming language: large user base from diverse disciplines\n",
-    "Strong libraries, machine learning in particular\n",
+    "Unlike R, which specializes in statistical computing/data analytics (more domain-specific), Python started as a general-purpose programming language. Incidentally, this brought in large user base from diverse disciplines.\n",
+    "\n",
+    "This resulted in a rich pool of scientific libraries with strong community support. \n",
+    "Python also has rich libraries beyond scientific computing, so it is natural to directly utilize scientific computing results in diverse applications such as image processing, natural language processing, etc.\n",
+    "\n",
+    "In disciplines like machine learning, Python became the de facto standard language in many companies, and you may be required to use it sometimes. You might have heard about deep learning, tensorflow, pytorch, etc.. and they are  in Python.\n",
+    "\n",
+    "### Scientific Python (SciPy) Ecosystem\n",
+    "\n",
+    "Libraries are important characteristic of how Python works: each application has its libraries. For scientific computing, one can use a combination of the packages that meets the need. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "| Package | Description | Logo |\n",
+    "|:---:|:---|:---:|\n",
+    "| __Numpy__ | Numerical arrays | <img src=\"https://numpy.org/doc/stable/_static/numpylogo.svg\" width=\"300\"/> |\n",
+    "| Scipy | User-friendly and efficient numerical routines:<br> numerical integration, interpolation, optimization, linear algebra, and statistics | <img src=\"https://scipy.org/images/logo.svg\" width=\"200\"/> |\n",
+    "| __Jupyter Notebook__ | Interactive programming environment | <img src=\"https://jupyter.org/assets/homepage/main-logo.svg\" width=\"200\"/> |\n",
+    "| __Matplotlib__ | Plotting | <img src=\"https://matplotlib.org/_static/logo2_compressed.svg\" width=\"300\"/>|\n",
+    "| __Pandas__ | Data analytics <br> R-like data frames | <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Pandas_logo.svg/1024px-Pandas_logo.svg.png\" width=\"300\"/> |\n",
+    "| Scikit-learn | Machine learning | <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Scikit_learn_logo_small.svg/2880px-Scikit_learn_logo_small.svg.png\" width=\"300\"/> | \n",
+    "\n",
+    "All the packages above are included in the Anaconda distribution. If you download Anaconda, it comes with all the useful scientific programming packages. Packages used in this workshop are in bold.\n",
     "\n",
     "\n",
     "## Pandas\n",
@@ -126,14 +148,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "99779e1a",
-   "metadata": {},
-   "source": [
-    "We can check the class of `icustays_df`:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "00b258da",
@@ -152,6 +166,29 @@
    ],
    "source": [
     "icustays_df.__class__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60a0d7a2-42df-4a55-bfb5-ebc3b685b5b1",
+   "metadata": {},
+   "source": [
+    "The variable read in is an instance of `DataFrame`. Let's talk a little bit about what this means. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e62fab6-52b4-4cd7-8dba-ccd1ff9aa3ad",
+   "metadata": {},
+   "source": [
+    "#### Note: Object-Oriented Programming\n",
+    "\n",
+    "Python has built-in object-oriented programming (OOP) support. The OOP paradigm is based on \"objects\", which is bundled with data representing properties of the object and code in the form of method. \n",
+    "\n",
+    "- __Class__: defines data format (attributes) and available procdeures (methods) for an object. `DataFrame`.\n",
+    "- __Object__: An instance of a class. `icustays_df`. \n",
+    "- __Attributes__: Properties like column names, number of rows, number of columns, etc. __syntax: `df.attribute`__\n",
+    "- __Methods__: \"Actions\" (or procedures/functions) applied to or performed on the object. __syntax: `df.method(arg1, arg2, etc.)`__"
    ]
   },
   {
@@ -481,14 +518,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cabb7029",
-   "metadata": {},
-   "source": [
-    "One may use method chaining for linearizing method calls."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "467785e9",
@@ -529,7 +558,11 @@
    "id": "57b6f7d1",
    "metadata": {},
    "source": [
-    "Note: as `print()` is not a method of `DataFrame`, we cannot chain print as what we did in R. There are tries to implement pipe using the bitwise or (`|`) operator, but I would not show it here. "
+    "#### Note: Method Chaining\n",
+    "One may use method chaining for linearizing method calls, as above. As the dot operator(`.`) is evaluated from left to right, one may \"chain\" another method call or attribute access right after obtaining the result of the previous method call or attribute access. This is a \"pythonic\" way of avoiding nested calls.\n",
+    "\n",
+    "One limitation is that we can only do this for methods or attributes of a class. In this case, `print()` is not a method of `DataFrame`, we cannot chain `print` as what we did in R. \n",
+    "There are packages that implement pipe by overloading other operator (e.g., the bitwise or (`|`) operator). "
    ]
   },
   {
@@ -539,7 +572,7 @@
    "source": [
     "## Target cohort (from R section)\n",
     "\n",
-    "We aim to develop a predictive model, which computes the chance of dying within 30 days of ICU stay `intime` based on baseline features  \n",
+    "Let's continue on with the task we did with R. We aim to develop a predictive model, which computes the chance of dying within 30 days of ICU stay `intime` based on baseline features  \n",
     "- `first_careunit`  \n",
     "- `age` at `intime`  \n",
     "- `gender`  \n",
@@ -559,7 +592,7 @@
    "id": "d4bcb299",
    "metadata": {},
    "source": [
-    "## Wrangling and merging tibbles (from R section)\n",
+    "## Wrangling and merging data frames\n",
     "\n",
     "Our stragegy is\n",
     "\n",
@@ -780,9 +813,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "bb66eaf5",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
