--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -18,13 +18,13 @@
     "Unlike R, which specializes in statistical computing/data analytics (more domain-specific), Python started as a general-purpose programming language. Incidentally, this brought in large user base from diverse disciplines.\n",
     "\n",
     "This resulted in a rich pool of scientific libraries with strong community support. \n",
-    "Python also has rich libraries beyond scientific computing, so it is natural to directly utilize scientific computing results in diverse applications such as image processing, natural language processing, etc.\n",
+    "Python also has rich libraries beyond scientific computing, so it is natural to directly utilize scientific computing results in diverse applications such as image processing, natural language processing, gaming, etc.\n",
     "\n",
-    "In disciplines like machine learning, Python became the de facto standard language in many companies, and you may be required to use it sometimes. You might have heard about deep learning, tensorflow, pytorch, etc.. and they are  in Python.\n",
+    "In disciplines like machine learning, Python became the de facto standard language in many companies, and you may be required to use it sometimes. You might have heard about deep learning, tensorflow, pytorch, etc. and they are  in Python.\n",
     "\n",
     "### Scientific Python (SciPy) Ecosystem\n",
     "\n",
-    "Libraries are important characteristic of how Python works: each application has its libraries. For scientific computing, one can use a combination of the packages that meets the need. \n",
+    "Libraries are important characteristic of how Python works: each application has its libraries. For scientific computing, one can use a combination of the following packages that meets the need. \n",
     "\n",
     "\n",
     "\n",
@@ -38,12 +38,12 @@
     "| __Pandas__ | Data analytics <br> R-like data frames | <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Pandas_logo.svg/1024px-Pandas_logo.svg.png\" width=\"300\"/> |\n",
     "| Scikit-learn | Machine learning | <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Scikit_learn_logo_small.svg/2880px-Scikit_learn_logo_small.svg.png\" width=\"300\"/> | \n",
     "\n",
-    "All the packages above are included in the Anaconda distribution. If you download Anaconda, it comes with all the useful scientific programming packages. Packages used in this workshop are in bold.\n",
+    "All the packages above are included in the [Anaconda distribution](https://www.anaconda.com/products/distribution) of Python. If you download Anaconda, it comes with all the useful scientific programming packages. Packages used in this workshop are in bold.\n",
     "\n",
     "\n",
     "## Pandas\n",
     "\n",
-    "Pandas is a Python library for working with datasets. It supports data frame-like data structure like in R. \n"
+    "Pandas is a Python library for working with datasets. It supports data frame structure like in R. \n"
    ]
   },
   {
@@ -352,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time:  36.74157039800001\n"
+      "Elapsed time:  31.347407034999996\n"
      ]
     }
    ],
@@ -618,90 +618,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2c7e54a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "icustays_df_1ststay = icustays_df.sort_values([\"subject_id\", \"intime\"]).groupby(\"subject_id\").first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "5699a567",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             hadm_id   stay_id  \\\n",
-      "subject_id                       \n",
-      "10000032    29079034  39553978   \n",
-      "10000980    26913865  39765666   \n",
-      "10001217    24597018  37067082   \n",
-      "10001725    25563031  31205490   \n",
-      "10001884    26184834  37510196   \n",
-      "...              ...       ...   \n",
-      "19999442    26785317  32336619   \n",
-      "19999625    25304202  31070865   \n",
-      "19999828    25744818  36075953   \n",
-      "19999840    21033226  38978960   \n",
-      "19999987    23865745  36195440   \n",
-      "\n",
-      "                                              first_careunit  \\\n",
-      "subject_id                                                     \n",
-      "10000032                  Medical Intensive Care Unit (MICU)   \n",
-      "10000980                  Medical Intensive Care Unit (MICU)   \n",
-      "10001217                 Surgical Intensive Care Unit (SICU)   \n",
-      "10001725    Medical/Surgical Intensive Care Unit (MICU/SICU)   \n",
-      "10001884                  Medical Intensive Care Unit (MICU)   \n",
-      "...                                                      ...   \n",
-      "19999442                 Surgical Intensive Care Unit (SICU)   \n",
-      "19999625    Medical/Surgical Intensive Care Unit (MICU/SICU)   \n",
-      "19999828                  Medical Intensive Care Unit (MICU)   \n",
-      "19999840                                 Trauma SICU (TSICU)   \n",
-      "19999987                                 Trauma SICU (TSICU)   \n",
-      "\n",
-      "                                               last_careunit  \\\n",
-      "subject_id                                                     \n",
-      "10000032                  Medical Intensive Care Unit (MICU)   \n",
-      "10000980                  Medical Intensive Care Unit (MICU)   \n",
-      "10001217                 Surgical Intensive Care Unit (SICU)   \n",
-      "10001725    Medical/Surgical Intensive Care Unit (MICU/SICU)   \n",
-      "10001884                  Medical Intensive Care Unit (MICU)   \n",
-      "...                                                      ...   \n",
-      "19999442                 Surgical Intensive Care Unit (SICU)   \n",
-      "19999625    Medical/Surgical Intensive Care Unit (MICU/SICU)   \n",
-      "19999828                  Medical Intensive Care Unit (MICU)   \n",
-      "19999840                 Surgical Intensive Care Unit (SICU)   \n",
-      "19999987                                 Trauma SICU (TSICU)   \n",
-      "\n",
-      "                        intime             outtime       los  \n",
-      "subject_id                                                    \n",
-      "10000032   2180-07-23 14:00:00 2180-07-23 23:50:47  0.410266  \n",
-      "10000980   2189-06-27 08:42:00 2189-06-27 20:38:27  0.497535  \n",
-      "10001217   2157-11-20 19:18:02 2157-11-21 22:08:00  1.118032  \n",
-      "10001725   2110-04-11 15:52:22 2110-04-12 23:59:56  1.338588  \n",
-      "10001884   2131-01-11 04:20:05 2131-01-20 08:27:30  9.171817  \n",
-      "...                        ...                 ...       ...  \n",
-      "19999442   2148-11-19 14:23:43 2148-11-26 13:12:15  6.950370  \n",
-      "19999625   2139-10-10 19:18:00 2139-10-11 18:21:28  0.960741  \n",
-      "19999828   2149-01-08 18:12:00 2149-01-10 13:11:02  1.790995  \n",
-      "19999840   2164-09-12 09:26:28 2164-09-17 16:35:15  5.297766  \n",
-      "19999987   2145-11-02 22:59:00 2145-11-04 21:29:30  1.937847  \n",
-      "\n",
-      "[53150 rows x 7 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(icustays_df_1ststay)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "7c825e61",
    "metadata": {},
    "outputs": [
@@ -767,7 +683,8 @@
    ],
    "source": [
     "icustays_df_1ststay = (icustays_df.sort_values([\"subject_id\", \"intime\"]).\n",
-    "                       groupby(\"subject_id\").head(1)) # head() is much faster than slice_head(n) in dplyr\n",
+    "                       groupby(\"subject_id\").\n",
+    "                       head(1)) # head() is much faster than slice_head(n) in dplyr\n",
     "print(icustays_df_1ststay)"
    ]
   },
@@ -783,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d6e3364c",
    "metadata": {},
    "outputs": [],
@@ -798,7 +715,7 @@
     "    sort_values([\"stay_id\", \"itemid\", \"charttime\"]).\n",
     "    groupby([\"stay_id\", \"itemid\"]).\n",
     "    head(1). # 263332 rows\n",
-    "    drop([\"charttime\", \"intime\", \"outtime\"], axis=\"columns\").\n",
+    "    drop([\"charttime\", \"intime\", \"outtime\"], axis=\"columns\"). # remove unnecessary columns\n",
     "    astype({\"itemid\": str}). # change it to string for easier renaming\n",
     "    pivot(index=\"stay_id\", columns=\"itemid\", values=\"valuenum\").\n",
     "    rename(columns={\"220045.0\": \"heart_rate\",\n",
@@ -811,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "bb66eaf5",
    "metadata": {},
    "outputs": [
@@ -963,7 +880,7 @@
        "[53136 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "006c49f0",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "e2c386e8",
    "metadata": {},
    "outputs": [
@@ -1409,7 +1326,7 @@
        "[53150 rows x 34 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "8e05a328",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1555,7 @@
        "max       941.000000  12262.000000  140119.000000    106.000000    180.000000  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1676,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "5b9e5899",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1612,7 @@
        "Name: first_careunit, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "1ba82f5c",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1635,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "46bf2337",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1664,7 @@
        "Name: ethnicity, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "250f373b",
    "metadata": {},
    "outputs": [],
@@ -1793,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "fc0e306e",
    "metadata": {},
    "outputs": [
@@ -1803,7 +1720,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1824,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "64807bae",
    "metadata": {},
    "outputs": [
@@ -1834,7 +1751,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1855,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "dcfd4d7c",
    "metadata": {},
    "outputs": [
@@ -1865,7 +1782,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1924,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "id": "9beee688",
    "metadata": {},
    "outputs": [
@@ -1934,7 +1851,7 @@
        "<AxesSubplot:xlabel='first_careunit'>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1959,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 26,
    "id": "f718e73d",
    "metadata": {},
    "outputs": [
@@ -1969,7 +1886,7 @@
        "<AxesSubplot:xlabel='first_careunit'>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2002,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 27,
    "id": "35cfec00",
    "metadata": {},
    "outputs": [
@@ -2012,7 +1929,7 @@
        "<AxesSubplot:xlabel='gender'>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2037,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 28,
    "id": "7ecbb45f",
    "metadata": {},
    "outputs": [
@@ -2047,7 +1964,7 @@
        "<AxesSubplot:xlabel='gender'>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
