remove mentions of tibbles for python

--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "source": [
     "# Python for Data Science"
-
    ]
   },
   {
@@ -601,7 +600,7 @@
     "\n",
     "2. Identify and keep the first vital measurements during the first ICU stay of each patient.\n",
     "\n",
-    "3. Join four tibbles into a single tibble.\n",
+    "3. Join four data frames into a single data frame.\n",
     "\n",
     "Important data wrangling concepts: group_by, sort, slice, joins, and pivot."
    ]
